--- a/package.json
+++ b/package.json
@@ -42,5 +42,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Emon5419/GeniusCarServices-ClientSite.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Emon5419/GeniusCarServices-ClientSite/issues"
+  },
+  "homepage": "https://github.com/Emon5419/GeniusCarServices-ClientSite#readme"
 }
